# finance-sentiment-tracker

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: lint.yaml
app/: main.py
app/api/v1/endpoints/: products.py  sentiments.py  stock.py
app/core/: database.py
app/models/: __init__.py  product.py  sentiment.py  stock.py
app/schemas/: product.py  sentiment.py  stock.py
app/services/: scheduler.py  sentiment.py  stock.py
backend/src/: db.py  main.py  models.py  product.py  stock_data_fetcher.py
src/: SQL.sql  db.py  logging_config.py  main.py  models.py  product.py  scheduler.py  sentiment.py
